--- a/public/index.html
+++ b/public/index.html
@@ -85,14 +85,25 @@
 <body class="fullh unseen" onresize="logF(onScreenResize)">
 	
 	<!-- Overlay -->
-  <div class="w3-overlay w3-display-container" onclick="" style="cursor:pointer" id="idOverlay">
-  	<div class="lds-spinner w3-display-middle"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+  <div class="w3-overlay w3-display-container" onclick="logF(overlayHiddenOnly)" style="cursor:pointer" id="idOverlay">
+  	<div class="lds-spinner w3-display-middle" id="idOverlaySpinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+  	<div class="w3-row w3-display-middle w3-white hidden" id="idOverlayPanel" style="width: 300px; height: 400px;z-index: 2">
+		<div class="w3-bar"><h3 class="w3-bar-item">Cài đặt</h3><h5 class="w3-right w3-bar-item" onclick="logF(overlayHiddenAll)">&times;</h5></div>
+		<div class="w3-bar"><p class="w3-bar-item">Fast Mode</p>
+			<p class="w3-right w3-bar-item">
+			<!-- Switch --><div class="switch"> <label> Tắt <input type="checkbox"> <span class="lever"></span> Bật </label> </div>
+			</p>
+		</div>
+  	</div>
   </div>
 
   <script description="Overlay">
-  	var obOverlay = {};initOverlay=()=>{initElm(obOverlay,['e'],['idOverlay']);}
-  	overlayAppear=()=>{obOverlay.es.display="block"} 
-  	overlayDisappear=()=>{obOverlay.es.display="none";}
+  	var obOverlay = {},elmObNames=['e','spinner','panel'];initOverlay=()=>{initElm(obOverlay,elmObNames,['idOverlay','idOverlaySpinner','idOverlayPanel']);}
+  	overlayCtr=(val,vIdx)=>obOverlay[elmObNames[vIdx]+'s'].display=(val==1)?'block':'none';
+  	overlayShowSpinner=()=>{[1,1,0].forEach(overlayCtr);} 
+  	overlayShowPanel=()=>{[1,0,1].forEach(overlayCtr)}
+  	overlayHiddenAll=()=>{[0,0,0].forEach(overlayCtr);}
+  	overlayHiddenOnly=(e)=>{e=e||window.event;var target=e.target||e.srcElement; logE(target);if(target.id!='idOverlay') return false; else overlayHiddenAll();}
   </script>
 
 	<!-- Sidebar -->
@@ -228,6 +239,7 @@
 	        <a class="w3-bar-item w3-button w3-hover-theme" onclick="logF(onMenuClick)"><i class="fa fa-bars" id="idMenu"></i></a>
 	        <span class="w3-bar-item">Quản Lý Công việc</span>  
 	        <a class="w3-right txSmall pad10p" href="" onclick="onSignOut();return false;">Đăng xuất</a>
+	        <a class="w3-bar-item w3-button w3-hover-theme w3-right" onclick="logF(overlayShowPanel);"><i class="fa fa-cog"></i></a>
 	      </div>
 	    </div>
 		</div>
@@ -336,10 +348,10 @@
 						<div class="pLR15px collapsible-body m0px">
 							<form autocomplete="off" class="w3-row" name="idGiaoviecForm" id="idGiaoviecForm">
 								<div class="w3-col s12 m4 w3-container">
-									<label for="idNguoigiao">Người giao</label><input type="text" name="idNguoigiao" class="classNguoigiao">
+									<label for="idNguoigiao">Người giao</label><input type="text" name="idNguoigiao" class="classNgLaoDong">
 								</div>
 								<div class="w3-col s12 m4 w3-container">
-									<label for="idPhutrach">Người phụ trách</label><input type="text" name="idPhutrach" class="classPhutrach">
+									<label for="idPhutrach">Người phụ trách</label><input type="text" name="idPhutrach" class="classNgLaoDong">
 								</div>
 								<div class="w3-col s8 m4 w3-container">
 									<label for="idNgayYeucau">Ngày yêu cầu hoàn thành</label><input type="date" name="idNgayYeucau">
@@ -354,7 +366,7 @@
 									<label for="idNoidungchitiet">Nội dung chi tiết</label><textarea class="materialize-textarea" id="idNoidungchitiet"></textarea>
 								</div>
 								<div class="w3-cell-row">
-									<div class="w3-cell w3-center" ><button class="w3-button w3-blue w95" type="button" onclick="logF(taskContentGetUI,{elm:this,index:-1})">Giao việc</button></div>
+									<div class="w3-cell w3-center" ><button class="w3-button w3-blue w97" type="button" onclick="logF(taskContentGetUI,{elm:this,index:-1})">Giao việc</button></div>
 								</div>
 							</form>
 						</div>
@@ -402,14 +414,14 @@
 						<div class="w3-cell w3-center"><button class="w3-button w3-orange w95" onclick="logF(itemStateSelected,{elm:this,state:3});">Tạm dừng</button></div>
 					</div>
 					<div class="hidden">
-						<form class="w3-row hidden hoanthanhForm">
-							<div class="w3-col s8"><label>Người thực hiện</label><input type="text" name="idNguoithuchien${index}"></div>
+						<form class="w3-row hidden hoanthanhForm" autocomplete="off">
+							<div class="w3-col s8"><label>Người thực hiện</label><input type="text" name="idNguoithuchien${index}" class="classNgLaoDong"></div>
 							<div class="w3-col s11"><label>Kết quả thực hiện</label><textarea class="materialize-textarea" name="idKetquathuchien${index}"></textarea></div>
 							<div class="w3-cell-row">
 							<div class="w3-cell w3-center"><button class="w3-button w3-theme pheduyet" onclick="logF(dataSubmitTask,{elm:this,index:${index},state:0})" type="button">Gửi đi phê duyệt</button></div></div>
 						</form>
-						<form class="w3-row hidden tamdungForm">
-							<div class="w3-col s8"><label>Người xin tạm dừng</label><input type="text" name="idNguoitamdung${index}"></div>
+						<form class="w3-row hidden tamdungForm" autocomplete="off">
+							<div class="w3-col s8"><label>Người xin tạm dừng</label><input type="text" name="idNguoitamdung${index}" class="classNgLaoDong"></div>
 							<div class="w3-col s11"><label>Lý do tạm dừng</label><textarea class="materialize-textarea" name="idLydotamdung${index}"></textarea></div>
 							<div class="w3-cell-row">
 							<div class="w3-cell w3-center"><button class="w3-button w3-theme pheduyet" onclick="logF(dataSubmitTask,{elm:this,index:${index},state:1})" type="button">Gửi đi phê duyệt</button></div></div>
@@ -422,14 +434,14 @@
 						<div class="w3-cell w3-center"><button class="w3-button ${btnStateColor} w95" onclick="logF(itemStateSelected,{elm:this,state:3});">Phê Duyệt ${stateTx}</button></div>
 					</div>
 					<div class="hidden">
-						<form class="w3-row hidden">
-							<div class="w3-col s8"><label>Người phê duyệt</label><input type="text" name="idNguoikhongphe${index}"></div>
+						<form class="w3-row hidden" autocomplete="off">
+							<div class="w3-col s8"><label>Người phê duyệt</label><input type="text" name="idNguoikhongphe${index}" class="classNgLaoDong"></div>
 							<div class="w3-col s11"><label>Vấn đề còn tồn tại</label><textarea class="materialize-textarea" name="idNoidungkophe${index}"></textarea></div>
 							<div class="w3-cell-row">
 							<div class="w3-cell w3-center"><button class="w3-button ${btnStateColor} pheduyet" onclick="logF(dataConfirmTask,{elm:this,index:${index},state:0,source:'${source}'})" type="button">Xác nhận</button></div></div>
 						</form>
-						<form class="w3-row hidden">
-							<div class="w3-col s8"><label>Người phê duyệt</label><input type="text" name="idNguoipheduyet${index}"></div>
+						<form class="w3-row hidden" autocomplete="off">
+							<div class="w3-col s8"><label>Người phê duyệt</label><input type="text" name="idNguoipheduyet${index}" class="classNgLaoDong"></div>
 							<div class="w3-col s11"><label>Nội dung phê duyệt</label><textarea class="materialize-textarea" name="idNoidungphe${index}"></textarea></div>
 							<div class="w3-cell-row">
 							<div class="w3-cell w3-center"><button class="w3-button ${btnStateColor} pheduyet" onclick="logF(dataConfirmTask,{elm:this,index:${index},state:1,source:'${source}'})" type="button">Xác nhận</button></div></div>
@@ -481,12 +493,12 @@
 							<div class="w3-cell-row bot10p">
 								<div class="w3-cell w3-center hidden dulieuEditCtrl" ><button class="w3-button w3-green w97" type="button" onclick="logF(taskContentEditToggle,{elm:this,index:${index}})">Sửa nội dung Giao việc</button></div>
 							</div>
-							<form class="w3-row hidden" name="idGiaoviecForm${index}" id="idGiaoviecForm${index}">
+							<form class="w3-row hidden" name="idGiaoviecForm${index}" id="idGiaoviecForm${index}" autocomplete="off">
 								<div class="w3-col s12 m4 w3-container">
-									<label for="idNguoigiao${index}">Người giao</label><input type="text" name="idNguoigiao${index}" class="classNguoigiao">
+									<label for="idNguoigiao${index}">Người giao</label><input type="text" name="idNguoigiao${index}" class="classNgLaoDong">
 								</div>
 								<div class="w3-col s12 m4 w3-container">
-									<label for="idPhutrach${index}">Người phụ trách</label><input type="text" name="idPhutrach${index}" class="classPhutrach">
+									<label for="idPhutrach${index}">Người phụ trách</label><input type="text" name="idPhutrach${index}" class="classNgLaoDong">
 								</div>
 								<div class="w3-col s8 m4 w3-container">
 									<label for="idNgayYeucau${index}">Ngày yêu cầu hoàn thành</label><input type="date" name="idNgayYeucau${index}">
@@ -501,7 +513,7 @@
 									<label for="idNoidungchitiet${index}">Nội dung chi tiết</label><textarea class="materialize-textarea" id="idNoidungchitiet${index}"></textarea>
 								</div>
 								<div class="w3-cell-row">
-									<div class="w3-cell w3-center" ><button class="w3-button w3-green w95" type="button" onclick="logF(taskContentGetUI,{elm:this,index:${index}})">Xác nhận sửa</button></div>
+									<div class="w3-cell w3-center" ><button class="w3-button w3-green w97" type="button" onclick="logF(taskContentGetUI,{elm:this,index:${index}})">Xác nhận sửa</button></div>
 								</div>
 							</form>
 							<hr>
@@ -604,18 +616,18 @@
 	<script description="dataProcess">
 		dataToMem=()=>{
 			var url=`${appscriptConfig.workUrl}?action=getList&email=${mainData.user.email}&uid=${mainData.user.uid}&hash=${mainData.hash}`;
-		  	logE('getList:'+url);logF(overlayAppear);
+		  	logE('getList:'+url);logF(overlayShowSpinner);
 		  	callGasApi(url,true).then(gasApiCb).then(response=>{// merge data + main.user
 		      logE('getList Ok:');
 		      var values=mapJsonValue(response.header,decompressSheetValues(response.values));
 		      mainData.hash=response.hash;logE('MainHash:'+mainData.hash);
 		      (response.addOne==true)?mainData.congviecList.push(values[0]):mainData.congviecList=values; 
 		      logE('AddOne:'+response.addOne);
-		      logF(memToUi);logF(overlayDisappear);
+		      logF(memToUi);logF(overlayHiddenAll);
 		    },(er)=>alertEr('GasApiError+work',er));
 		}
 		
-		memToUi=()=>{logE('sidebarAddGroup()');sidebarAddGroup(mainData.congviecList);logF(initAutoDuan);}
+		memToUi=()=>{logE('sidebarAddGroup()');sidebarAddGroup(mainData.congviecList);logF(initAutoDuan);logF(loadStaffList)}
 
 		loadStaffList=()=>{
 			var url=`${appscriptConfig.userUrl}?action=getList`;
@@ -852,7 +864,7 @@
   <script src="lib/autocomplete-js.js"></script>
   <link rel="stylesheet" type="text/css" href="lib/autocomplete-css.css">
   <script description="autocomplete">
-  	initAutoStaffList=()=>{tryLoop(['classNguoigiao','classPhutrach'],(classForAuto)=>elmLoop(document,classForAuto,e=>autocomplete(e,mainData.staffAutoList)));}
+  	initAutoStaffList=()=>{tryLoop(['classNgLaoDong'],(classForAuto)=>elmLoop(document,classForAuto,e=>autocomplete(e,mainData.staffAutoList)));}
   	initAutoDuan=()=>{elmLoop(document,'classDuan',e=>autocomplete(e,obSidebar.origin[2].i));}
   </script>
   <script>
@@ -863,7 +875,7 @@
   	var uiReady = false;
   	//Credit to:https://stackoverflow.com/questions/8835413/difference-between-load-vs-domcontentloaded
   	document.addEventListener("DOMContentLoaded", ()=>{
-  		logF(initFirebaseApp,{callback:()=>{logF(initScriptMaterialize);logF(initScriptUI);logF(dataToMem);uiReady=true;logF(loadStaffList)}});
+  		logF(initFirebaseApp,{callback:()=>{logF(initScriptMaterialize);logF(initScriptUI);logF(dataToMem);uiReady=true;}});
   	});
   </script>
 </body>
