--- a/public/index.html
+++ b/public/index.html
@@ -87,12 +87,10 @@
 	<!-- Overlay -->
   <div class="w3-overlay w3-display-container" onclick="logF(overlayHiddenOnly)" style="cursor:pointer" id="idOverlay">
   	<div class="lds-spinner w3-display-middle" id="idOverlaySpinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
-  	<div class="w3-row w3-display-middle w3-white hidden" id="idOverlayPanel" style="width: 300px; height: 400px;z-index: 2">
+  	<div class="w3-card-4 w3-display-middle w3-white hidden" id="idOverlayPanel" style="width: 350px; height: 400px;z-index: 2">
 		<div class="w3-bar"><h3 class="w3-bar-item">Cài đặt</h3><h5 class="w3-right w3-bar-item" onclick="logF(overlayHiddenAll)">&times;</h5></div>
-		<div class="w3-bar"><p class="w3-bar-item">Fast Mode</p>
-			<p class="w3-right w3-bar-item">
-			<!-- Switch --><div class="switch"> <label> Tắt <input type="checkbox"> <span class="lever"></span> Bật </label> </div>
-			</p>
+		<div class="w3-bar w3-row"><p class="w3-bar-item w3-col s6">Fast Mode</p>
+		<div class="switch w3-col s6 w3-bar-item"> <label> Tắt <input type="checkbox" onchange="onCboxChange({elm:this})"> <span class="lever"></span> Bật </label> </div><!-- Switch -->
 		</div>
   	</div>
   </div>
@@ -104,6 +102,8 @@
   	overlayShowPanel=()=>{[1,0,1].forEach(overlayCtr)}
   	overlayHiddenAll=()=>{[0,0,0].forEach(overlayCtr);}
   	overlayHiddenOnly=(e)=>{e=e||window.event;var target=e.target||e.srcElement; logE(target);if(target.id!='idOverlay') return false; else overlayHiddenAll();}
+
+  	onCboxChange=(p)=>{mainData.settings.fastMode=(p.elm.checked);elmLoop(document,'classFastMode',e=>{e.value=p.elm.checked?mainData.user.hoten:'';e.disabled=p.elm.checked;});}
   </script>
 
 	<!-- Sidebar -->
@@ -137,10 +137,10 @@
 	</div>
 	<script description="overlaySidebar">
 	var obSidebar = {data:[
-		{n:'Thông dụng',i:['Công việc của tôi','Công việc đơn vị','Công việc trung tâm'],c:['mine','mygroup','mycentre']},
+		{n:'Thông dụng',i:['Công việc của tôi','Liên quan tới tôi','Công việc đơn vị','Công việc trung tâm'],c:['mine','related','mygroup','mycentre']},
 		{n:'Đơn vị',i:['Thiết bị Thông tin Dẫn đường','Cơ điện đèn','Bảo trì sân đường','Môi trường khu bay','Văn phòng'],
 			c:['TBTTDD','CDD','BTSD','MTKB','VPKB']},
-		],active:{g:0,i:2}};
+		],active:{g:0,i:3}};
 
 	const domKList=['idSidebar','idSidebarSearch','idSidebarUserPanel','idSidebarContent','idUserName','idUserSubName',
 									'idSignedInEmail','idDonvi','idUserImg'];
@@ -348,16 +348,19 @@
 						<div class="pLR15px collapsible-body m0px">
 							<form autocomplete="off" class="w3-row" name="idGiaoviecForm" id="idGiaoviecForm">
 								<div class="w3-col s12 m4 w3-container">
-									<label for="idNguoigiao">Người giao</label><input type="text" name="idNguoigiao" class="classNgLaoDong">
+									<label for="idNguoigiao">Người giao</label><input type="text" name="idNguoigiao" class="classNgLaoDong classFastMode">
 								</div>
 								<div class="w3-col s12 m4 w3-container">
 									<label for="idPhutrach">Người phụ trách</label><input type="text" name="idPhutrach" class="classNgLaoDong">
 								</div>
+								<div class="w3-col s12 m4 w3-container">
+									<label for="idPhoihop">Bên phối hợp</label><input type="text" name="idPhoihop" class="classNgLaoDong">
+								</div>
+								<div class="w3-col s8 w3-container">
+									<label for="idDuan">Thuộc dự án</label><input type="text" name="idDuan" class="classDuan">
+								</div>
 								<div class="w3-col s8 m4 w3-container">
 									<label for="idNgayYeucau">Ngày yêu cầu hoàn thành</label><input type="date" name="idNgayYeucau">
-								</div>
-								<div class="w3-col s12 w3-container">
-									<label for="idDuan">Thuộc dự án</label><input type="text" name="idDuan" class="classDuan">
 								</div>
 								<div class="w3-col s12 w3-container">
 									<label for="idTencongviec">Tên công việc</label><input type="text" name="idTencongviec">
@@ -415,13 +418,13 @@
 					</div>
 					<div class="hidden">
 						<form class="w3-row hidden hoanthanhForm" autocomplete="off">
-							<div class="w3-col s8"><label>Người thực hiện</label><input type="text" name="idNguoithuchien${index}" class="classNgLaoDong"></div>
+							<div class="w3-col s8"><label>Người thực hiện</label><input type="text" name="idNguoithuchien${index}" class="classNgLaoDong classFastMode"></div>
 							<div class="w3-col s11"><label>Kết quả thực hiện</label><textarea class="materialize-textarea" name="idKetquathuchien${index}"></textarea></div>
 							<div class="w3-cell-row">
 							<div class="w3-cell w3-center"><button class="w3-button w3-theme pheduyet" onclick="logF(dataSubmitTask,{elm:this,index:${index},state:0})" type="button">Gửi đi phê duyệt</button></div></div>
 						</form>
 						<form class="w3-row hidden tamdungForm" autocomplete="off">
-							<div class="w3-col s8"><label>Người xin tạm dừng</label><input type="text" name="idNguoitamdung${index}" class="classNgLaoDong"></div>
+							<div class="w3-col s8"><label>Người xin tạm dừng</label><input type="text" name="idNguoitamdung${index}" class="classNgLaoDong classFastMode"></div>
 							<div class="w3-col s11"><label>Lý do tạm dừng</label><textarea class="materialize-textarea" name="idLydotamdung${index}"></textarea></div>
 							<div class="w3-cell-row">
 							<div class="w3-cell w3-center"><button class="w3-button w3-theme pheduyet" onclick="logF(dataSubmitTask,{elm:this,index:${index},state:1})" type="button">Gửi đi phê duyệt</button></div></div>
@@ -435,13 +438,13 @@
 					</div>
 					<div class="hidden">
 						<form class="w3-row hidden" autocomplete="off">
-							<div class="w3-col s8"><label>Người phê duyệt</label><input type="text" name="idNguoikhongphe${index}" class="classNgLaoDong"></div>
+							<div class="w3-col s8"><label>Người phê duyệt</label><input type="text" name="idNguoikhongphe${index}" class="classNgLaoDong classFastMode"></div>
 							<div class="w3-col s11"><label>Vấn đề còn tồn tại</label><textarea class="materialize-textarea" name="idNoidungkophe${index}"></textarea></div>
 							<div class="w3-cell-row">
 							<div class="w3-cell w3-center"><button class="w3-button ${btnStateColor} pheduyet" onclick="logF(dataConfirmTask,{elm:this,index:${index},state:0,source:'${source}'})" type="button">Xác nhận</button></div></div>
 						</form>
 						<form class="w3-row hidden" autocomplete="off">
-							<div class="w3-col s8"><label>Người phê duyệt</label><input type="text" name="idNguoipheduyet${index}" class="classNgLaoDong"></div>
+							<div class="w3-col s8"><label>Người phê duyệt</label><input type="text" name="idNguoipheduyet${index}" class="classNgLaoDong classFastMode"></div>
 							<div class="w3-col s11"><label>Nội dung phê duyệt</label><textarea class="materialize-textarea" name="idNoidungphe${index}"></textarea></div>
 							<div class="w3-cell-row">
 							<div class="w3-cell w3-center"><button class="w3-button ${btnStateColor} pheduyet" onclick="logF(dataConfirmTask,{elm:this,index:${index},state:1,source:'${source}'})" type="button">Xác nhận</button></div></div>
@@ -470,6 +473,7 @@
 									<p class="pLR7px"><h4><b>Giao việc</b></h4></p>
 									<p><b>Người giao: </b>${item.giaoviec.nguoigiao.hoten}</p>
 									<p><b>Người phụ trách: </b>${item.giaoviec.chutri.hoten}</p>
+									<p><b>Phối hợp cùng: </b>${item.giaoviec.phoihop.hoten}</p>
 									<p><b>Yêu cầu hoàn thành: </b>${item.giaoviec.thoihan.full}</p>
 									${item.giaoviec.duan.length>0?`<p><b>Thuộc dựa án: </b>${item.giaoviec.duan}</p>`:''}
 									<p><b>Nội dung chi tiết:</b></p>
@@ -479,6 +483,7 @@
 									<p class="pLR7px"><h4><b>Giao việc</b></h4></p>
 									<p><b>Người giao: </b>${item.giaoviec.nguoigiao.hoten}</p>
 									<p><b>Người phụ trách: </b>${item.giaoviec.chutri.hoten}</p>
+									<p><b>Phối hợp cùng: </b>${item.giaoviec.phoihop.hoten}</p>
 									<p><b>Yêu cầu hoàn thành: </b>${item.giaoviec.thoihan.full}</p>
 									${item.giaoviec.duan.length>0?`<p><b>Thuộc dựa án: </b>${item.giaoviec.duan}</p>`:''}
 									<p><b>Nội dung chi tiết:</b></p>
@@ -500,11 +505,14 @@
 								<div class="w3-col s12 m4 w3-container">
 									<label for="idPhutrach${index}">Người phụ trách</label><input type="text" name="idPhutrach${index}" class="classNgLaoDong">
 								</div>
+								<div class="w3-col s12 m4 w3-container">
+									<label for="idPhoihop${index}">Bên phối hợp</label><input type="text" name="idPhoihop${index}" class="classNgLaoDong">
+								</div>
+								<div class="w3-col s8 w3-container">
+									<label for="idDuan${index}">Thuộc dự án</label><input type="text" name="idDuan${index}" class="classDuan">
+								</div>
 								<div class="w3-col s8 m4 w3-container">
 									<label for="idNgayYeucau${index}">Ngày yêu cầu hoàn thành</label><input type="date" name="idNgayYeucau${index}">
-								</div>
-								<div class="w3-col s12 w3-container">
-									<label for="idDuan${index}">Thuộc dự án</label><input type="text" name="idDuan${index}" class="classDuan">
 								</div>
 								<div class="w3-col s12 w3-container">
 									<label for="idTencongviec${index}">Tên công việc</label><input type="text" name="idTencongviec${index}">
@@ -547,6 +555,7 @@
 						case 'mycentre': return true;
 						case 'mygroup': return item.giaoviec.chutri.madonvi==mainData.user.madonvi;
 						case 'mine': return item.giaoviec.chutri.hoten==mainData.user.hoten;
+						case 'related': return item.giaoviec.phoihop.hoten==mainData.user.hoten;
 						case 'TBTTDD': case 'CDD': case 'BTSD': case 'MTKB': case'VPKB': return item.giaoviec.chutri.madonvi==filter.sidebarSearchTerm;
 						case 'Duan': return item.giaoviec.duan==filter.sidebarSearchTx;
 						default: return true;}}
@@ -613,15 +622,29 @@
 		focusMainSearch=()=>mainSolieuHideOnSmall();
 		
 	</script>
+	<script decsription="localStorage">
+		checkLocalStorage=()=>(mainData.support.storage = (typeof(Storage)!='undefined'));
+		localSet=(keyStr,objStr)=>localStorage.setItem(keyStr,objStr);
+		localGet=(keyStr)=>localStorage.getItem(keyStr);
+		localDel=(keyStr)=>{localStorage.removeItem(keyStr);}
+		
+	</script>
 	<script description="dataProcess">
 		dataToMem=()=>{
+			if(mainData.support.storage){mainData.hash=localGet('hash');var t=localGet('congviecList');mainData.congviecList=JSON.parse(t?t:'[]');}
+
 			var url=`${appscriptConfig.workUrl}?action=getList&email=${mainData.user.email}&uid=${mainData.user.uid}&hash=${mainData.hash}`;
 		  	logE('getList:'+url);logF(overlayShowSpinner);
 		  	callGasApi(url,true).then(gasApiCb).then(response=>{// merge data + main.user
 		      logE('getList Ok:');
+		      if(mainData.hash==response.hash){logE('already loaded content! - data OK'); logF(memToUi);logF(overlayHiddenAll);return;}
+
 		      var values=mapJsonValue(response.header,decompressSheetValues(response.values));
 		      mainData.hash=response.hash;logE('MainHash:'+mainData.hash);
+
 		      (response.addOne==true)?mainData.congviecList.push(values[0]):mainData.congviecList=values; 
+		      localSet('congviecList',JSON.stringify(mainData.congviecList));
+		      localSet('hash',mainData.hash);
 		      logE('AddOne:'+response.addOne);
 		      logF(memToUi);logF(overlayHiddenAll);
 		    },(er)=>alertEr('GasApiError+work',er));
@@ -630,13 +653,14 @@
 		memToUi=()=>{logE('sidebarAddGroup()');sidebarAddGroup(mainData.congviecList);logF(initAutoDuan);logF(loadStaffList)}
 
 		loadStaffList=()=>{
+			if(staffListReady) return;
 			var url=`${appscriptConfig.userUrl}?action=getList`;
 			logE('getList+user:'+url);
 			callGasApi(url,true).then(gasApiCb).then(response=>{
 				logE('getList User Ok:')
 				mainData.staffList=mapJsonValue(response.header,decompressSheetValues(response.values));
 				mainData.staffAutoList=mainData.staffList.map(item=>item.hoten);
-				initAutoStaffList();
+				logF(initAutoStaffList);
 			},er=>alertEr('GasApiError',er));
 		}
 		
@@ -655,9 +679,9 @@
 			p.elm.disabled=true;
 			var ext=p.index==-1?'':p.index, action=p.index==-1?'create':'edit', pos=p.index+3;
 			var temp = [];
-			['idNguoigiao','idPhutrach','idNgayYeucau','idDuan','idTencongviec','idNoidungchitiet'].forEach((k,idx)=>temp[idx]=p.elm.form[k+ext].value);
-			var ngaygiao=formatDateForId(new Date(),1), thoihan=(temp[2].length>0)?formatFormDate(temp[2].split('-'),1):undefined;
-			var queryData={timestamp:ngaygiao,id:{},giaoviec:{ngaygiao:getDateJSON(ngaygiao),nguoigiao:getPeopleJSON(temp[0]),chutri:getPeopleJSON(temp[1]),thoihan:getDateJSON(thoihan)},duan:temp[3],tinhtrang:"Đang thực hiện",noidung:{tomtat:temp[4],daydu:temp[5]}};
+			['idNguoigiao','idPhutrach','idPhoihop','idDuan','idNgayYeucau','idTencongviec','idNoidungchitiet'].forEach((k,idx)=>temp[idx]=p.elm.form[k+ext].value);
+			var ngaygiao=formatDateForId(new Date(),1), thoihan=(temp[4].length>0)?formatFormDate(temp[4].split('-'),1):undefined;
+			var queryData={timestamp:ngaygiao,id:{},giaoviec:{ngaygiao:getDateJSON(ngaygiao),nguoigiao:getPeopleJSON(temp[0]),chutri:getPeopleJSON(temp[1]),phoihop:getPeopleJSON(temp[2]),duan:temp[3],thoihan:getDateJSON(thoihan)},tinhtrang:"Đang thực hiện",noidung:{tomtat:temp[5],daydu:temp[6]}};
 			
 			var url=`${appscriptConfig.workUrl}?action=${action}&email=${mainData.user.email}&uid=${mainData.user.uid}&pos=${pos}&unit=${JSON.stringify(queryData)}`;
 		  	logE(action+':'+url);
@@ -669,14 +693,15 @@
 		      }
 		      logF(dataToMem);
 		      p.elm.disabled=false;
-		      ['idNguoigiao','idPhutrach','idNgayYeucau','idTencongviec','idNoidungchitiet'].forEach((k,idx)=>p.elm.form[k+ext].value = '');
+		      ['idNguoigiao','idPhutrach','idPhoihop','idDuan','idNgayYeucau','idTencongviec','idNoidungchitiet'].forEach((k,idx)=>p.elm.form[k+ext].value = '');
 		    },(er)=>{alertEr('GasApiError',er);p.elm.disabled=false;});
 		}
 		taskContentSetUI=(p)=>{
 			var item=mainData.congviecList[p.index];
-			const giaoviecSubkey=['hoten','hoten','full'], noidungKey=['tomtat','daydu'];
-			var gv=['nguoigiao','chutri','thoihan'].map((k,idx)=>{var v=item.giaoviec[k][giaoviecSubkey[idx]];return idx!=2?v:formatFormDate(v.split('/'),'-')});
-			tryLoop(['idNguoigiao','idPhutrach','idNgayYeucau'],(k,idx)=>{p.elm[k+p.index].value=gv[idx]});
+			const giaoviecSubkey=['hoten','hoten','hoten','full'], noidungKey=['tomtat','daydu'];
+			var gv=['nguoigiao','chutri','phoihop','thoihan'].map((k,idx)=>
+				{var v=item.giaoviec[k][giaoviecSubkey[idx]];return idx!=3?v:formatFormDate(v.split('/'),'-')});
+			tryLoop(['idNguoigiao','idPhutrach','idPhoihop','idNgayYeucau'],(k,idx)=>{p.elm[k+p.index].value=gv[idx]});
 			tryLoop(['idTencongviec','idNoidungchitiet'],(k,idx)=>{p.elm[k+p.index].value=item.noidung[noidungKey[idx]]});
 		}
 		dataSubmitTask=(p)=>{
@@ -763,6 +788,8 @@
 				}
 			}],
 			filter:{sidebarSearchTerm:'',mainSearchTerm:''},
+			settings:{fastMode:false},
+			support:{storage:false}
 		};
 		testDulieu=()=>{
 			var items=[{
@@ -872,9 +899,10 @@
 	initScriptMaterialize=()=>{logF(initFab);M.Collapsible.init(document.querySelectorAll('.collapsible'), {});}
   	initScriptUI=()=>{logF(initMainUI);logF(initOverlay);logF(initSolieu);logF(initSideBar);logF(initDulieuUI);}
   	
-  	var uiReady = false;
+  	var uiReady = false, staffListReady = false;
   	//Credit to:https://stackoverflow.com/questions/8835413/difference-between-load-vs-domcontentloaded
   	document.addEventListener("DOMContentLoaded", ()=>{
+  		logF(checkLocalStorage);
   		logF(initFirebaseApp,{callback:()=>{logF(initScriptMaterialize);logF(initScriptUI);logF(dataToMem);uiReady=true;}});
   	});
   </script>
